####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = ed2k_hash

## INCLUDES were found outside kdevelop specific part

ed2k_hash_SOURCES = md4.c processfile.c linkedlist.c options.c cl_ui.c main.c 
ed2k_hash_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.c cl_ui.h cl_ui.c options.h options.c linkedlist.h linkedlist.c ui.h processfile.h processfile.c md4.h md4.c global.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
ed2k_hash_LDFLAGS = $(all_libraries) 
                                                                                
