
bin_PROGRAMS=ed2k_hash_gui
SUFFIXES=.c

ed2k_hash_gui_SOURCES=\
	../global.h ../ui.h \
	../linkedlist.h ../linkedlist.c \
	../md4.h ../md4.c \
	../options.h ../options.c \
	../main.c \
	../processfile.h ../processfile.c \
	gui.cpp \
	Thread.h Thread.cpp \
	Mutex.h Mutex.cpp \
	Semaphore.h Semaphore.cpp \
	Event.h Event.cpp \
	JobQueue.h JobQueue.cpp \
	MainWindow.h MainWindow.cpp \
	Configuration.h Configuration.cpp \
	About.h About.cpp \
	../ui.h ui.cpp
