AC_INIT(main.cpp)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(ed2k_hash_gui, 0.3.4)

AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL

AC_LANG(C++)

CPPFLAGS=$CPPFLAGS\ -D_GUI=1\ -DPROTOTYPES=1\ -D_REENTRANT\ -I..

dnl search for fltk...

AC_MSG_CHECKING(fltk-config)

FLTKCONFIG=""
AC_ARG_WITH(fltk,
  [  --with-fltk-config      Path to fltk-config ],
  if test "$withval" != ""; then
    if test -e "$withval/fltk-config"; then
      FLTKCONFIG="$withval/fltk-config"
    else
      FLTKCONFIG="$withval"
    fi
  fi
)

if test "$FLTKCONFIG" = ""; then
  LS=/usr\ /usr/local

  for d in $LS; do
    if test -e "$d/bin/fltk-config"; then
      FLTKCONFIG="$d/bin/fltk-config"
    fi
  done
fi

if test "$FLTKCONFIG" = ""; then
  echo Not found
  AC_MSG_ERROR("Cannot find fltk-config. try with --with-fltk-config=<path>")
else
  echo $FLTKCONFIG
fi

CXXFLAGS=$CXXFLAGS\ `$FLTKCONFIG --cxxflags`
LIBS=$LIBS\ `$FLTKCONFIG --ldstaticflags`

dnl search for pthreads

INC=/usr/include\ /usr/local/include
AC_ARG_WITH(pthread,[  --with-pthread          location of the pthread library],
  if test "$withval" != ""; then
    INC=$INC\ $withval\ $withval/include
  fi
)

PTFOUND=0
for i in $INC
do
  if test -e "$i/pthread.h"; then
    CPPFLAGS=$CPPFLAGS\ -I$i
    PTFOUND=1
  fi
done

if test "$PTFOUND" = "0"; then
  AC_MSG_ERROR([Cannot find pthreads. Try --with-pthreads=<path>])
fi

AC_CHECK_LIB(pthread,pthread_create,,AC_MSG_ERROR([Cannot find pthreads. Try --with-pthreads=<path>]))

AC_OUTPUT(Makefile)
